--- a/Ping Pong Game/index.html
+++ b/Ping Pong Game/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Ping Pong</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://github.com/Kiran-Ghosh/Ping-Pong-Game/blob/main/Ping%20Pong%20Game/css/style.css">
 </head>
 <body>
 
